feat: add “Import from Git” option to Import-Dependency dialog (#434)
What it does
New “Git Repository” source type in the Import Dependency dialog.
Accepts SSH (git@…), HTTPS (https://…) and plain GitHub URLs (auto-adds “.git”).
Uses JGit ls-remote to validate the remote and pull back branches + tags; the repo’s default branch is pre-selected.
Shallow clone (depth 1, single branch/tag) into a temp folder, strips the .git/ directory, then copies the cleaned source tree into .brokk/dependencies/<repo-name>.
When the destination already exists the user now sees an overwrite confirmation dialog (same behaviour as “Directory” imports).
UX flow
Choose Git Repository → paste URL → Validate & List…
Pick branch or tag → Import
Progress runs in background; on success a message advises reopening/rebuilding the project so Code-Intelligence picks up the new files.
Notes & follow-ups
Feature closes #434.
Code compiles & passes Null-Away; manual tests (default branch, tag, overwrite, no .brokk/dependencies folder) all succeed.
Refresh: we only print “Reopen project…”; auto-triggering a rebuild can be added later if desired.
Edge cases (private remotes, very large repos, sub-modules) are still out of scope for this first cut.
Heads-up on merge conflicts
GitRepo was touched in this PR (helper listRemoteRefs and a small null-check tweak). Jonathan pushed other changes there, so incoming merge conflicts are likely. I’ll handle those rebases/resolutions right after reviews land.